ontopia-core/src/test/resources/net/ontopia/testdata/ltm/error/prefix-declared-twice.ltm
#PREFIX prefix @"http://some-address/#"
#PREFIX prefix @"http://some-other-address/#"
[prefix:foo = "A topic"]
